Theme_3_3_Airflow/airflow/logs/dag_id=fetch_exchange_rates_dag/run_id=manual__2023-07-25T224309.304564+0000/task_id=fetch_exchange_rates_task/attempt=1.log
[2023-07-25 22:43:10,483] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-25T22:43:09.304564+00:00 [queued]>
[2023-07-25 22:43:10,491] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-25T22:43:09.304564+00:00 [queued]>
[2023-07-25 22:43:10,492] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-07-25 22:43:10,493] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2023-07-25 22:43:10,494] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-07-25 22:43:10,506] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): fetch_exchange_rates_task> on 2023-07-25 22:43:09.304564+00:00
[2023-07-25 22:43:10,512] {standard_task_runner.py:52} INFO - Started process 90 to run task
[2023-07-25 22:43:10,515] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'fetch_exchange_rates_dag', 'fetch_exchange_rates_task', 'manual__2023-07-25T22:43:09.304564+00:00', '--job-id', '315', '--raw', '--subdir', 'DAGS_FOLDER/my_calc_rates.py', '--cfg-path', '/tmp/tmpm6ec39ja', '--error-file', '/tmp/tmp13su4ik6']
[2023-07-25 22:43:10,517] {standard_task_runner.py:80} INFO - Job 315: Subtask fetch_exchange_rates_task
[2023-07-25 22:43:10,583] {task_command.py:371} INFO - Running <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-25T22:43:09.304564+00:00 [running]> on host 661c8d62a693
[2023-07-25 22:43:10,636] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=marina_z
AIRFLOW_CTX_DAG_ID=fetch_exchange_rates_dag
AIRFLOW_CTX_TASK_ID=fetch_exchange_rates_task
AIRFLOW_CTX_EXECUTION_DATE=2023-07-25T22:43:09.304564+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-07-25T22:43:09.304564+00:00
[2023-07-25 22:43:11,002] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/my_calc_rates.py", line 93, in fetch_exchange_rates
    cur.execute(copy_query)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6:         )
                ^

[2023-07-25 22:43:11,012] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=fetch_exchange_rates_dag, task_id=fetch_exchange_rates_task, execution_date=20230725T224309, start_date=20230725T224310, end_date=20230725T224311
[2023-07-25 22:43:11,022] {standard_task_runner.py:97} ERROR - Failed to execute job 315 for task fetch_exchange_rates_task (syntax error at or near ")"
LINE 6:         )
                ^
; 90)
[2023-07-25 22:43:11,050] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-07-25 22:43:11,081] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
